# lambda-calc

./: README.md  lambda-calc.cabal
lib/: base.l  nat.l  nat2.l
src/: AST.hs  Check.hs  Eval.hs  Lexer.x  Main.hs  Parser.hs
test/: Lazy.hs
